k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudnotes-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudnotes-backend

  template:
    metadata:
      labels:
        app: cloudnotes-backend

    spec:
      containers:
        - name: cloudnotes-backend
          image: ghcr.io/sasank1489/cloudnotes-backend:latest

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
